--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="menu_messages">Messages</string>
     <string name="menu_notifications">Notifications</string>
     <string name="menu_profile">Profile</string>
+    <string name="menu_logout">Logout</string>
 </resources>
